--- a/example/v-show v-if v-else-if v-else.html
+++ b/example/v-show v-if v-else-if v-else.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script src="../assets/js/vue.min.js"></script>
-    <title>Hello World</title>
+    <title>v-show v-if v-else-if v-else</title>
 </head>
 
 <body>
