--- a/example/v-text v-html.html
+++ b/example/v-text v-html.html
@@ -7,13 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script src="../assets/js/vue.min.js"></script>
-    <title>Hello World</title>
+    <title>v-text v-html</title>
 </head>
 
 <body>
 
     <div id="app">
-        {{message}}
+        {{}} : <h1>{{message}}</h1>
+        v-text : <h1 v-text="message"></h1>
+        v-html : <h1 v-html="message"></h1>
     </div>
 
 </body>
@@ -22,8 +24,7 @@
     var app = new Vue({
         el: '#app',
         data: {
-            message: 'Hello World'
-
+            message: 'Hello World <small>small demo<small>'
         }
     });
 
