--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <hr>
     <h3>第二: Vue全局API</h3>
     <ol>
-        <li><a href="">Vue.directive 自定义指令</a></li>
-        <li><a href="">Vue.extend 构造器延伸</a></li>
-        <li><a href="">Vue.set 全局操作</a></li>
+        <li><a href="./example/vue.directive.html">Vue.directive 自定义指令</a></li>
+        <li><a href="./example/vue.extend.html">Vue.extend 构造器延伸</a></li>
+        <li><a href="./example/vue.set.html">Vue.set 全局操作</a></li>
         <li><a href="">构造器的生命周期</a></li>
         <li><a href="">Template 模板的写法</a></li>
         <li><a href="">component: 组件-1</a></li>
