--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <li><a href="./example/vue.directive.html">Vue.directive 自定义指令</a></li>
         <li><a href="./example/vue.extend.html">Vue.extend 构造器延伸</a></li>
         <li><a href="./example/vue.set.html">Vue.set 全局操作</a></li>
-        <li><a href="">构造器的生命周期</a></li>
-        <li><a href="">Template 模板的写法</a></li>
-        <li><a href="">component: 组件-1</a></li>
-        <li><a href="">component: 组件-2 props</a></li>
-        <li><a href="">component: 组件-3 父子组件关系</a></li>
-        <li><a href="">component: 组件-4 components who</a></li>
+        <li><a href="./example/lifecycle.html">构造器的生命周期</a></li>
+        <li><a href="./example/template.html">Template 模板的写法</a></li>
+        <li><a href="./example/component-1.html">component: 组件-1</a></li>
+        <li><a href="./example/component-2_props.html">component: 组件-2 props</a></li>
+        <li><a href="./example/component-3_父子组件关系.html">component: 组件-3 父子组件关系</a></li>
+        <li><a href="./example/component-4_components.html">component: 组件-4 components who</a></li>
         <li><a href=""></a></li>
     </ol>
 
