--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <hr>
     <h3>第三: Vue选项</h3>
     <ol>
-        <li><a href="">propsData Option</a></li>
-        <li><a href="">computed Option</a></li>
-        <li><a href="">methods Option</a></li>
-        <li><a href="">watch Option</a></li>
-        <li><a href="">Mixins Option</a></li>
-        <li><a href="">Extends Option</a></li>
-        <li><a href="">Other Option</a></li>
+        <li><a href="./example/option/propData.html">propsData Option</a></li>
+        <li><a href="./example/option/computed.html">computed Option</a></li>
+        <li><a href="./example/option/methods.html">methods Option</a></li>
+        <li><a href="./example/option/watch.html">watch Option</a></li>
+        <li><a href="./example/option/mixin.html">Mixins Option</a></li>
+        <li><a href="./example/option/extends.html">Extends Option</a></li>
+        <li><a href="./example/option/otherOption.html">Other Option</a></li>
     </ol>
 
     <hr>
@@ -61,7 +61,7 @@
     <hr>
     <h3>第五: Vue内置组件</h3>
     <ol>
-        <li><a href="./example/">slot-组件的内容扩展</a></li>
+        <li><a href="./example/plugins/slot.html">slot-组件的内容扩展</a></li>
         <li><a href="">vue-resource</a></li>
     </ol>
 </body>
