--- a/example/option/mixin.html
+++ b/example/option/mixin.html
@@ -7,36 +7,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script src="../../assets/js/vue.min.js"></script>
-    <title>component-1</title>
+    <title>mixin option demo</title>
 </head>
 
 <body>
 
     <div id="app">
-        <hello></hello>
-        <helloworld></helloworld>
+        {{message}}
+        <p></p>
     </div>
 
 </body>
 <script>
 
-    Vue.component('hello',{
-        template: `<div>全局化注册的: &lt;hello&gt;标签</div>`
-    });
+    //全局混入
+    Vue.mixin({
+        created: function () {
+            console.log('全局被混入的');
+        }
+    })
 
-    var helloworld = {
-        template: `<div>局部注册的: &lt;helloworld&gt;标签</div>`
+    var aaa = {
+        created: function () {
+            console.log('外部被混入的');
+        }
     }
 
     var app = new Vue({
         el: '#app',
         data: {
             message: 'Hello World'
-
         },
-        components: {
-            "helloworld": helloworld
-        }
+        created: function () {
+            console.log('我是原生的');
+        },
+        mixins: [aaa]
     });
 
 </script>
