--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
     <hr>
     <h3>第四: Vue实例</h3>
     <ol>
-        <li><a href="">Early examples Demo-实例属性</a></li>
-        <li><a href="">examples method Demo-实例方法</a></li>
-        <li><a href="">examples Event Demo-实例事件</a></li>
+        <li><a href="./example/example/example1_jq.html">Early examples Demo-实例属性</a></li>
+        <li><a href="./example/example/example2_method.html">examples method Demo-实例方法</a></li>
+        <li><a href="./example/example/example3_event.html">examples Event Demo-实例事件</a></li>
     </ol>
 
     <hr>
     <h3>第五: Vue内置组件</h3>
     <ol>
         <li><a href="./example/plugins/slot.html">slot-组件的内容扩展</a></li>
-        <li><a href="">vue-resource</a></li>
+        <li><a href="./example/plugins/vue-resource.html">vue-resource</a></li>
     </ol>
 </body>
 
